--- a/packages/end-user/src/css/components/_text-input.scss
+++ b/packages/end-user/src/css/components/_text-input.scss
@@ -19,6 +19,7 @@
     }
 
     &--success {
+        border-color: $color-success-green;
         background-color: $color-white;
 
         padding-right: $spacing-xl;
