--- a/packages/end-user/src/css/components/_dropdown.scss
+++ b/packages/end-user/src/css/components/_dropdown.scss
@@ -16,6 +16,23 @@ $caret-height: 16px;
     }
 }
 
+@mixin caret-with-icon {
+    &:after {
+        font-family: $icon-font;
+        content: $pingicon-dropdown-arrow;
+        font-size: 13px;
+        line-height: 13px;
+        position: absolute;
+        right: $spacing-sm;
+        top: 50%;
+        transform: translateY(-50%);
+        height: 16px;
+        width: 16px;
+        pointer-events: none;
+        margin-right: 25px;
+    }
+}
+
 @mixin field-message-caret {
     &:after {
         font-family: $icon-font;
@@ -29,6 +46,23 @@ $caret-height: 16px;
         height: 16px;
         width: 16px;
         pointer-events: none;
+    }
+}
+
+@mixin field-message-caret-with-icon {
+    &:after {
+        font-family: $icon-font;
+        content: $pingicon-dropdown-arrow;
+        font-size: 13px;
+        line-height: 13px;
+        position: absolute;
+        right: $spacing-sm;
+        top: 26%;
+        transform: translateY(-50%);
+        height: 16px;
+        width: 16px;
+        pointer-events: none;
+        margin-right: 25px;
     }
 }
 
@@ -47,10 +81,20 @@ $caret-height: 16px;
 
     position: relative;
 
-    @include caret;
+    &--standard {
+        @include caret;
+    }
 
-    &--error {
+    &--with-message {
         @include field-message-caret;
+    }
+
+    &--with-status-icon {
+        @include caret-with-icon;
+    }
+
+    &--with-icon-and-message {
+        @include field-message-caret-with-icon;
     }
 
     &--open {
@@ -71,6 +115,14 @@ $caret-height: 16px;
 
         &--error {
             border-color: $color-critical-red;
+
+            background-color: $color-white;
+        }
+
+        &--success {
+            border-color: $color-success-green;
+
+            background-color: $color-white;
         }
     }
 
@@ -171,6 +223,35 @@ $caret-height: 16px;
         }
         .dropdown__close {
             display: none;
+        }
+    }
+}
+
+.dropdown__icon {
+    font-family: $icon-font;
+    font-size: 16px;
+    line-height: 16px;
+    text-transform: none;
+    position: relative;
+    width: 100%;
+
+    &::before {
+        position: absolute;
+        right: $spacing-md;
+        top: calc(45px * 0.5 - (16px / 2));
+    }
+
+    &--error {
+        &::before {
+            content: $pingicon-error-triangle;
+            color: $color-critical-red;
+        }
+    }
+
+    &--success {
+        &::before {
+            content: $pingicon-success-round;
+            color: $color-success-green;
         }
     }
 }
