UIP-3662: Indent title wraps

--- a/packages/ui-library/src/css/_indent.scss
+++ b/packages/ui-library/src/css/_indent.scss
@@ -125,6 +125,10 @@
         }
     }
 
+    &__title-content {
+        white-space: nowrap;
+    }
+
     &--with-colors {
         &__title {
             // Necessary for very small indents; will not be centered otherwise.
