UIP-3611: Fix PW types and Feedback alert color

--- a/packages/end-user/src/css/components/_feedback.scss
+++ b/packages/end-user/src/css/components/_feedback.scss
@@ -13,6 +13,10 @@
     @extend %icon-pair__label;
 }
 
+.feedback--alert {
+    color: $color-warning-yellow;
+}
+
 .feedback--error {
     color: $color-critical-red;
 }
