--- a/packages/end-user/src/css/components/_text-input.scss
+++ b/packages/end-user/src/css/components/_text-input.scss
@@ -2,10 +2,6 @@
     @extend %input-text;
     @extend %input-box;
 
-    &:focus {
-        border-color: $input-focus-border-color;
-    }
-
     &::placeholder {
         @extend %placeholder-text;
     }
@@ -19,6 +15,8 @@
     }
 
     &--success {
+        border-color: $color-success-green;
+
         background-color: $color-white;
 
         padding-right: $spacing-xl;
@@ -44,6 +42,10 @@
     &--dropdown-search {
         border-width: 0 0 1px 0;
         border-color: $color-neutral-70;
+    }
+
+    &:focus {
+        border-color: $input-focus-border-color;
     }
 }
 
