UIP-3477: File upload disabled styling

--- a/packages/ui-library/src/css/_inputs.scss
+++ b/packages/ui-library/src/css/_inputs.scss
@@ -1321,6 +1321,14 @@ input[type=file] {
                 width: 72px;
                 padding: 5px 0 0;
             }
+
+            &.disabled {
+                cursor: default;
+
+                &:after {
+                    color: $color-rhino;
+                }
+            }
         }
         .with-logo {
             width: 90px;
