Updates per gitlab comments

--- a/packages/end-user/src/css/components/_field-message.scss
+++ b/packages/end-user/src/css/components/_field-message.scss
@@ -20,7 +20,7 @@
             background-color: $color-active-blue;
         }
 
-        &--primary {
+        &--default {
             color: $color-neutral-20;
             background-color: $color-neutral-95;
         }
