--- a/packages/ui-library/src/css/general/_node-field.scss
+++ b/packages/ui-library/src/css/general/_node-field.scss
@@ -54,6 +54,7 @@ $label-chip-height: 28px;
         color: $color-white;
         font-size: 13px;
         margin-bottom: $spacing-xs;
+        text-transform: none;
     }
 }
 
@@ -63,6 +64,7 @@ $label-chip-height: 28px;
         font-size: 11px;
         margin-bottom: 0;
         max-width: 100px;
+        text-transform: none;
     }
 }
 
@@ -78,6 +80,7 @@ $label-chip-height: 28px;
         color: $color-white;
         font-size: 12px;
         max-width: 200px;
+        text-transform: none;
     }
 }
 
