--- a/packages/end-user/src/css/styles.scss
+++ b/packages/end-user/src/css/styles.scss
@@ -65,6 +65,7 @@
 @import './components/serialized-data';
 @import './components/spinner';
 @import './components/step-link';
+@import './components/text-area';
 @import './components/text-block';
 @import './components/text-input';
 @import './components/tooltip';
