UIP-3710: Support UserSelect theming

--- a/packages/branding-themes/scss/_helpers.scss
+++ b/packages/branding-themes/scss/_helpers.scss
@@ -66,6 +66,14 @@
         border-color: map-get($colors, 'button');
     }
 
+    .branding-template-user-card {
+        background-color: #fff !important;
+
+        &:hover {
+            border-color: map-get($colors, 'link') !important;
+        }
+    }
+
     .branding-template-primary-text {
         color: map-get($colors, 'bodyText');
     }
