--- a/packages/ui-library/src/css/rows/_row-builder.scss
+++ b/packages/ui-library/src/css/rows/_row-builder.scss
@@ -1,6 +1,6 @@
 .row-builder {
     &__rows {
-        display: inline-flex;
+        display: flex;
         flex-direction: column;
         align-items: stretch;
 
