Using mixn for bgcolor

--- a/packages/end-user/src/css/components/_float-label.scss
+++ b/packages/end-user/src/css/components/_float-label.scss
@@ -33,7 +33,7 @@ $float-label-input-padding-bottom: $input-padding-vertical - $spacing-xs;
         cursor: text;
 
         &-text-area {
-            background-color: #fff;
+            @include input-background-light;
             top: 1px;
             margin-top: 0px;
             padding-top: $spacing-xs + 1px;
