UIP-3674: Tutorial keyboard accessibility

--- a/packages/ui-library/src/css/_inputs.scss
+++ b/packages/ui-library/src/css/_inputs.scss
@@ -50,6 +50,7 @@ $default-input-border-radius: 2px;
 .button-menu__button,
 .input-image-thumb,
 .image-icon,
+.focusable-element,
 .tile-button {
     &:focus {
         outline-width: 0;
@@ -74,6 +75,7 @@ $default-input-border-radius: 2px;
     .button-menu__button,
     .input-image-thumb,
     .image-icon,
+    .focusable-element,
     .tile-button {
         &:focus {
             outline-width: 5px;
