UIP-3711: Policy node expandable row

--- a/packages/ui-library/src/css/layout/_policy-node.scss
+++ b/packages/ui-library/src/css/layout/_policy-node.scss
@@ -25,6 +25,8 @@
 
     &__head {
         margin-bottom: $spacing-sm;
+        display: flex;
+        align-items: center;
     }
 
     &--parent > * > &__label {
@@ -62,7 +64,6 @@
         margin: 0 1px + $spacing-xs 0 0;
         position: relative;
         text-align: center;
-        transform: translateY(-1px);
         vertical-align: middle;
         width: $height;
 
