UIP-3754: Lighten the error and warning colors for field messages

--- a/packages/end-user/src/css/_global-vars.scss
+++ b/packages/end-user/src/css/_global-vars.scss
@@ -120,6 +120,7 @@ $color-warning-text: #96702c;
 $color-success: $color-success-green;
 $color-success-highlighted: $color-success-green-highlighted;
 
+$color-warning-yellow-light: #faedbd;
 $color-critical-red-light: #eddad9;
 $color-critical-red-dark: #a31200;
 
