UIP-3745: Add markdown support for Checkbox label

--- a/packages/end-user/src/css/styles.scss
+++ b/packages/end-user/src/css/styles.scss
@@ -58,6 +58,7 @@
 @import './components/float-label';
 @import './components/form';
 @import './components/icon-feedback';
+@import './components/markdown';
 @import './components/modal-menu';
 @import './components/org-logo';
 @import './components/page';
