Added documentation Added UT-s

--- a/packages/ui-library/src/css/layout/_hero-chart.scss
+++ b/packages/ui-library/src/css/layout/_hero-chart.scss
@@ -44,6 +44,7 @@
         text-transform: uppercase;
         font-size: 18px;
         line-height: 1em;
+        color: $color-white;
     }
 
     &__value {
