Add ability to render front side of Frequency Card without back side. Fixed front legend help hint placement. Fi hovering on donut chart count always displays total count of users. Updated doc.

--- a/packages/ui-library/src/css/layout/_dashboard-cards.scss
+++ b/packages/ui-library/src/css/layout/_dashboard-cards.scss
@@ -651,6 +651,7 @@ $fullwidthBreakpoint: 950px;
 .frequency-card {
     overflow: visible;
     display: block;
+    min-height: 307px;
 
     &__title {
         margin-bottom: -24px;
@@ -675,6 +676,11 @@ $fullwidthBreakpoint: 950px;
 
     .dashboard-card__front {
         align-items: center;
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
     }
 
     .dashboard-card__back {
