--- a/packages/end-user/src/css/components/_checkbox.scss
+++ b/packages/end-user/src/css/components/_checkbox.scss
@@ -7,9 +7,15 @@ $checkbox-border-color: $color-neutral-40;
     display: inline-block;
     margin-bottom: $spacing-base;
 
-    > .field-message {
+    .field-message {
         margin-left: 2px;
-        margin-top: -1px;
+        position: absolute;
+        top: $spacing-lg;
+        display: none;
+    }
+
+    &:hover .field-message {
+        display: block;
     }
 }
 
@@ -19,7 +25,13 @@ $checkbox-border-color: $color-neutral-40;
 
     font-size: $font-size-sm;
     color: $checkbox-label-color;
-    display: inline-block;
+
+    &__icon {
+        @extend %normal-text;
+        margin-top: $spacing-xs;
+        margin-right: $spacing-sm;
+        vertical-align: middle;
+    }
 
     &--stacked {
         display: flex;
@@ -59,6 +71,7 @@ $checkbox-border-color: $color-neutral-40;
 .checkbox__label {
     font-family: $font-default;
     vertical-align: middle;
+    position: relative;
 }
 
 .checkbox__input + .checkbox__standin {
