--- a/packages/end-user/src/css/components/_text-input.scss
+++ b/packages/end-user/src/css/components/_text-input.scss
@@ -1,3 +1,18 @@
+@mixin input-icon {
+    font-family: $icon-font;
+    font-size: 16px;
+    line-height: 16px;
+    text-transform: none;
+    position: relative;
+    width: 100%;
+
+    &::before {
+        position: absolute;
+        right: $spacing-md;
+        top: $spacing-md;
+    }
+}
+
 .text-input {
     @extend %input-text;
     @extend %input-box;
@@ -12,19 +27,16 @@
         @extend %placeholder-text;
     }
 
-    &--error, &--error:focus {
+    &--error,
+    &--error:focus {
         border-color: $color-critical-red;
-
         background-color: $color-white;
-
         padding-right: $spacing-xl;
     }
 
     &--success {
         border-color: $color-success-green;
-
         background-color: $color-white;
-
         padding-right: $spacing-xl;
     }
 
@@ -55,19 +67,18 @@
     }
 }
 
-.text-input__icon {
-    font-family: $icon-font;
-    font-size: 16px;
-    line-height: 16px;
-    text-transform: none;
-    position: relative;
-    width: 100%;
-
-    &::before {
-        position: absolute;
-        right: $spacing-md;
-        top: calc(45px * 0.5 - (16px / 2));
+.text-input-container {
+    &--error,
+    &--success {
+        position: relative;
+        padding-right: $spacing-xl;
     }
+}
+
+.text-input__status-icon {
+    @include input-icon();
+    position: absolute;
+    right: 0;
 
     &--error {
         &::before {
@@ -80,6 +91,23 @@
         &::before {
             content: $pingicon-success-round;
             color: $color-success-green;
+        }
+    }
+}
+
+.text-input__icon {
+    @include input-icon();
+    cursor: pointer;
+
+    &--hidden {
+        &::before {
+            content: $pingicon-view-hidden;
+        }
+    }
+
+    &--view-hidden {
+        &::before {
+            content: $pingicon-view;
         }
     }
 }
