UIP-3773: Add lightened colors for info and success field messages

--- a/packages/end-user/src/css/_global-vars.scss
+++ b/packages/end-user/src/css/_global-vars.scss
@@ -120,6 +120,9 @@ $color-warning-text: #96702c;
 $color-success: $color-success-green;
 $color-success-highlighted: $color-success-green-highlighted;
 
+// Field Message lighter colors
+$color-success-green-light: $color-success-green-inactive;
+$color-info-blue-light: #e1eef5;
 $color-warning-yellow-light: #faedbd;
 $color-critical-red-light: #eddad9;
 $color-critical-red-dark: #a31200;
