UIP-3792: Fix ExpandableRow focus

--- a/packages/ui-library/src/css/_inputs.scss
+++ b/packages/ui-library/src/css/_inputs.scss
@@ -47,6 +47,9 @@ $default-input-border-radius: 2px;
 .integer-up,
 .view-toggle,
 .delete-btn,
+.expand-btn,
+.edit-btn,
+.view-btn,
 .button-menu__button,
 .input-image-thumb,
 .image-icon,
@@ -72,6 +75,9 @@ $default-input-border-radius: 2px;
     .integer-up,
     .view-toggle,
     .delete-btn,
+    .expand-btn,
+    .edit-btn,
+    .view-btn,
     .button-menu__button,
     .input-image-thumb,
     .image-icon,
