UIP-3812: making title and icon be centered in DeviceIcon

--- a/packages/end-user/src/css/shared/_device-icon.scss
+++ b/packages/end-user/src/css/shared/_device-icon.scss
@@ -1,6 +1,7 @@
 .device-icon {
     display: inline-block;
     vertical-align: middle;
+    text-align: center;
 
     &__title {
         text-transform: uppercase;
