--- a/packages/end-user/src/css/components/_text-input.scss
+++ b/packages/end-user/src/css/components/_text-input.scss
@@ -93,13 +93,6 @@
         }
     }
 
-    &--error + &--action,
-    &--success + &--action {
-        &::before {
-            margin-right: $spacing-lg;
-        }
-    }
-
     &--hidden {
         cursor: pointer;
         &::before {
@@ -113,4 +106,8 @@
             content: $pingicon-view;
         }
     }
+}
+
+.text-input__icon ~ .text-input__icon::before {
+    margin-right: $spacing-lg;
 }
