--- a/packages/end-user/src/css/components/_spinner.scss
+++ b/packages/end-user/src/css/components/_spinner.scss
@@ -1,26 +1,49 @@
 .spinner {
-    animation: spin 1.5s linear infinite;
+    $outside-circle: 9px;
+    $inside-circle: 7px;
     display: block;
     margin: $spacing-xx 0;
     text-align: center;
-    height: 50px;
+    width: 75px;
+    height: 75px;
+    border-width: $outside-circle;
     margin: $spacing-xx auto;
-    width: 50px;
-
-    &:has(div[class^="__icon"]) {
-        height: 0;
-        margin: 0;
-        width: 0;
-    }
+    border: $outside-circle solid $color-neutral-90;
+    border-radius: 50%;
+    position: relative;
+    box-sizing: border-box;
 
     &__icon {
-        &:after {
-            font-family: $icon-font;
-            content: $pingicon-spinner;
-            font-size: 50px;
-            color: $color-success;
+        position: absolute;
+        border: $inside-circle solid transparent;
+        border-top-color: $color-active-blue;
+        border-radius: 50%;
+        width: 100%;
+        height: 100%;
+        animation: spin 0.8s linear infinite;
+        top: -$outside-circle;
+        left: -$outside-circle;
+        margin: ($outside-circle - $inside-circle) / 2;
+        padding: ($outside-circle - $inside-circle) / 2;;
+        &:before, &:after {
+            content: '';
+            height: $inside-circle;
+            width: $inside-circle;
             display: inline-block;
+            background: $color-active-blue;
+            border-radius: 50%;
+            position: absolute;
+            top: 0;
         }
+        &:before {
+            left: 0;
+            transform: translate(38%, 38%);
+        }
+        &:after {
+            right: 0;
+            transform: translate(-38%, 38%);
+        }
+
     }
 }
 
