--- a/packages/ui-library/src/css/details-tooltip/_popover.scss
+++ b/packages/ui-library/src/css/details-tooltip/_popover.scss
@@ -125,9 +125,11 @@ $max-popover-width: 360px;
 .popover {
     position: relative;
     display: inline-block;
+    max-width: 100%;
 
     &__trigger {
         display: inline-block;
+        max-width: 100%;
 
         &--no-hover {
             &:hover {
