--- a/packages/ui-library/src/css/_expandablecard.scss
+++ b/packages/ui-library/src/css/_expandablecard.scss
@@ -19,14 +19,6 @@
         }
     }
 
-    &__title {
-        @include break-word;
-        color: $color-neutral-10;
-        font-size: 18px;
-        margin-bottom: 5px;
-        width: calc(100% - 20px);
-    }
-
     &__card {
         padding: $spacing-md;
         background: $color-neutral-95;
@@ -59,12 +51,6 @@
         }
     }
 
-    &__subtitle {
-        @include break-word;
-        color: $color-accent-neutral-20;
-        font-size: 14px;
-    }
-
     &__cardAccessories {
         position: absolute;
         top: $spacing-md;
@@ -75,15 +61,6 @@
         @include break-word;
         color: $color-neutral-20;
         font-size: 14px;
-        height: 40px;
-        display: flex;
-        align-items: flex-end;
-    }
-
-    &__chip {
-        height: 40px;
-        display: flex;
-        align-items: center;
     }
 
     &__holder {
@@ -131,7 +108,6 @@
 
     &__content-holder {
         position: relative;
-        transition: all 0.2s;
     }
 
     &__content {
@@ -142,7 +118,6 @@
         opacity: 0;
         position: absolute;
         width: 100%;
-        transition: max-height 0.3s, visiblility 0.2s, opacity 0.2s;
         max-height: 0%;
 
         &--expanded {
@@ -155,12 +130,17 @@
     }
 
     &__footer {
-        position: relative;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+    }
+
+    &__controls {
+        flex: 1;
     }
 
     &__expand {
-        position: absolute;
-        right: 0;
-        top: 0;
+        text-align: right;
+        flex-basis: auto;
     }
 }
